fixed presentation images again

--- a/sponsor.html
+++ b/sponsor.html
@@ -483,24 +483,24 @@
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-										<td class="firstTd"><div class="toggle">+</div>Presentation Posts</td><td>5</td><td>3</td><td>2</td><td>1</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Presentation Posts</h3>
-												<p> We will make a post on our social networks with a brief presentation of the company for all of the attendees and followers. The post should be brief and can be made either by SINFO's team or the company.</p>
-												<ul>
-													<li><a href="https://www.facebook.com/sinfoist">Facebook</a> - post size limit: 500 characters.</li>
-													<li><a href="https://twitter.com/sinfo_ist">Twitter</a> - post size limit: 140 characters.</li>
-												</ul>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item">
-										<td class="firstTd"><div class="toggle">+</div>Logo on the website</td><td>L</td><td>L</td><td>M</td><td>S</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on the website</h3>
-												<p>The Company logo will be on the Sponsor's section of our website with more 5.000 monthly views on average.</p>
+					<td class="firstTd"><div class="toggle">+</div>Presentation Posts</td><td>5</td><td>3</td><td>2</td><td>1</td>
+		            <tr class="description"><td colspan="5" class="noPadding">
+		            	<div class="shadow">
+			            	<h3>Presentation Posts</h3>
+							<p> We will make a post on our social networks with a brief presentation of the company for all of the attendees and followers. The post should be brief and can be made either by SINFO's team or the company.</p>
+							<ul>
+								<li><a href="https://www.facebook.com/sinfoist">Facebook</a> - post size limit: 500 characters.</li>
+								<li><a href="https://twitter.com/sinfo_ist">Twitter</a> - post size limit: 140 characters.</li>
+							</ul>
+						</div>
+		            </td></tr>
+				</tr>
+				<tr class="item">
+					<td class="firstTd"><div class="toggle">+</div>Logo on the website</td><td>L</td><td>L</td><td>M</td><td>S</td>
+		            <tr class="description"><td colspan="5" class="noPadding">
+		            	<div class="shadow">
+			            	<h3>Logo on the website</h3>
+							<p>The Company logo will be on the Sponsor's section of our website with more 5.000 monthly views on average.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                           <img src="img/sponsors/site.png">
                         </div>
@@ -803,7 +803,11 @@
                           </ol>
                           <li>Congress Center – rooms with capacity for 50 or 70 students.</li>
                         </ul>
-                          <div class="column-group push-center half-gutters">
+                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                          <img src="img/sponsors/apresentacao1.jpg">
+                        </div>
+                        <p></p>
+                        <div class="column-group push-center half-gutters">
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
 	                            <img src="img/sponsors/presentationAudience.jpg">
 	                          </div>
