--- a/sponsor.html
+++ b/sponsor.html
@@ -476,7 +476,7 @@
                             <img src="img/sponsors/flyer_back.JPG">
                           </div>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/programs.JPG">
+                            <img src="img/sponsors/programs.jpg">
                           </div>
                         </div>
                       </div>
@@ -580,7 +580,7 @@
 	                              <img src="img/sponsors/tshirts-rsz.JPG">
 	                            </div>
 	                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
-	                              <img src="img/sponsors/tshirts.JPG">
+	                              <img src="img/sponsors/tshirts.jpg">
 	                            </div>
 	                          </div>
                             </div>
@@ -899,7 +899,7 @@
                               <img src="img/sponsors/flyer_back.JPG">
                             </div>
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            	<img src="img/sponsors/programs.JPG">
+                            	<img src="img/sponsors/programs.jpg>
                           	</div>
                           </div>
                         </div>
