Changed event date index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="column-group gutters">
         <div class="all-50 small-100 tiny-100 justify-text">
           <h3>When?</h3>
-          <p>The 22nd annual edition will be a week long event and should take place in February 2015. </p>
+          <p>The 22nd annual edition will take place from 23 to 28 February 2015. </p>
         </div>
         <div class="all-50 small-100 tiny-100 justify-text">
           <h3>For how much?</h3>
