Added event date to sponsor website

--- a/sponsor.html
+++ b/sponsor.html
@@ -111,7 +111,7 @@
 			<div id="description" class="column-group gutters">
 				<div class="all-100">
 					<h2>Description</h2>
-					<p>In case you are not familiar with us, we invite you to visit our <a href="http://www.sinfo.org/">homepage</a> presenting the several elements of our event. You can also visit the <a href="http://xxi.sinfo.org/">XXI SINFO website</a>, the 2014 edition.</p>
+					<p>In case you are not familiar with us, this year's edition will take place from 23 to 28 February 2015 and we invite you to visit our <a href="http://www.sinfo.org/">homepage</a> presenting the several elements of our event. You can also visit the <a href="http://xxi.sinfo.org/">XXI SINFO website</a>, the 2014 edition.</p>
 				</div>
 			</div>
 			<div id="reasons" class="column-group gutters">
