changed caption "packages" to "Sponsorship Levels"

--- a/sponsor.html
+++ b/sponsor.html
@@ -138,7 +138,7 @@
 			<div id="conditions" class="column-group gutters">
 				<div class="all-100">
 					<h2>Sponsorship conditions</h2>
-					<h3>Packages</h3>
+					<h3>Sponsorship Levels</h3>
 
 					<div class="container">
 						<div class="heading"><div class="toggleHead">+</div>Annual</div>
