added curicula to main event package

--- a/sponsor.html
+++ b/sponsor.html
@@ -289,7 +289,16 @@
 										</tr>
 									</thead>
 									<tbody>
-                  <tr class="item">
+									<tr class="item">
+									<td class="firstTd"><div class="toggle">+</div>Curricula</td><td>1</td><td>1</td><td>1</td><td>1</td>
+						            <tr class="description"><td colspan="5" class="noPadding">
+						            	<div class="shadow">
+							            	<h3>Curricula</h3>
+											<p>Every sponsor that acquires a sponsoring pack will be granted one (1)  access to SINFO’s CV database, with CVs from students collected not only during the event but as of this year they are now collected, updated and processed throughout the year.</p>
+										</div>
+						            </td></tr>
+								</tr>
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Presentation</td><td>1</td><td>1</td><td>1</td><td>1*</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -321,10 +330,10 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item  alternate redirectPub">
+                  <tr class="item redirectPub">
                     <td class="firstTd"><div class="toggle">+</div>Advertising Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
                   </tr>
-                  <tr class="item">
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Stand and Stand ++</td><td>5 days</td><td>3 days</td><td>2 days</td><td>2 days*</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -359,7 +368,7 @@
                         </div>
                           </td></tr>
                   </tr>
-                  <tr class="item alternate">
+                  <tr class="item">
                     <td class="firstTd"><div class="toggle">+</div> + University pack</td><td>1</td><td>1</td><td>1</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -368,7 +377,7 @@
                       </div>
                    </td></tr>
                   </tr>
-                  <tr class="item">
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Activity Sponsorship</td><td class="notIncluded">x</td><td>1</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                     <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -377,7 +386,7 @@
                       </div>
                    </td></tr>
                   </tr>
-                  <tr class="item alternate">
+                  <tr class="item">
                     <td class="firstTd"><div class="toggle">+</div>Keynote Sponsorship</td><td>1</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -389,7 +398,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item">
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Custom Activity</td><td>1</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
