Add info about VAT after each price package

--- a/sponsor.html
+++ b/sponsor.html
@@ -272,6 +272,10 @@
                 <tr class="discount">
                     <td class="firstTd">Difference</td><td>- 3.250€</td><td>- 1.475€</td><td>- 750€</td><td>- 200€</td>
                   </tr>
+                  <tr class="choose">
+                     <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
+                  </tr>
+
 								</tbody>
 							</table>
 						</div>
@@ -418,6 +422,9 @@
                   </tr>
                   <tr class="choose">
                      <td class="firstTd" colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
+                  </tr>
+                  <tr class="choose">
+                     <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
                   </tr>
 									<tr class="perks">
 										<td class="firstTd" colspan="5"><h3>Perks</h3></td>
@@ -687,6 +694,9 @@
 									</tr>
                   <tr class="discount">
                     <td class="firstTd">Difference</td><td>- 855€</td><td>- 595€</td><td>- 310€</td><td>- 160€</td>
+                  </tr>
+                  <tr class="choose">
+                     <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
                   </tr>
 									</tbody>
 								</table>
