--- a/sponsor.html
+++ b/sponsor.html
@@ -918,7 +918,7 @@
                               <img src="img/sponsors/flyer_back.JPG">
                             </div>
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            	<img src="img/sponsors/programs.jpg>
+                            	<img src="img/sponsors/programs.jpg">
                           	</div>
                           </div>
                         </div>
