--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="#orador" class="glow">Who's this speaker?</a></li>
           <li><a href="code.html">Code of Conduct</a></li>          
         </ul>
       </nav>
@@ -86,7 +85,6 @@
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
           <li><a href="code.html">Code of Conduct</a></li>
-          <li><a href="#orador" class="glow">>QUEM É ESTE ORADOR?</a></li>
         </ul>
       </nav>
     </div>
@@ -153,7 +151,7 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">July 21st, 2014</span>
+          <span class="note">December 2nd, 2014</span>
           <h3>SINFO wants to help you get a job</h3>
           <p>
             Do you want to work for one of the companies at XXI SINFO?<br>
@@ -209,7 +207,31 @@
     <div class="ink-grid text-section previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-          <h2>Speakers from previous editions</h2>
+          <h2>Announced Speakers</h2>
+        </div>
+      </div>
+      <div class="column-group gutters">
+        <div class="all-20 medium-20 small-100 tiny-100">
+          <h6>Helder Pinto</h6>
+          <img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt="">
+          <p class="note">3D game environment artist at Blizzard</p>
+        </div>
+        <div class="all-20 medium-20 small-100 tiny-100">
+          <h6>Scott Chacon</h6>
+          <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
+          <p class="note">CIO and R&D VP of Github</p>
+        </div>
+	    </div>
+  	</div>
+
+    <div class="ink-grid previous-speakers">
+		<div class="column-group gutters">
+	        <div class="all-100">
+	     	   <h2>Previous Speakers</h2>
+	   		</div>
+	  	</div>
+      <div class="column-group gutters">
+        <div class="all-100">
           <span class="note">Click on the pictures to watch the talk on YouTube</span>
         </div>
       </div>
@@ -330,13 +352,11 @@
     <div class="meetus" id="meetus">
       <div class="opacidade">
         <h1><a href="#meetus" title="Meet Us">Meet Us!</a></h1>
-      <div class="description">
-        Let's talk! Come join us for a cup of coffee <i>(or beer)</i>. <br><br> Drop us a line: <i>geral@sinfo.org</i>
-      </div>
-    </div>
-  </div>
-
-
+	      <div class="description">
+	        Let's talk! Come join us for a cup of coffee <i>(or beer)</i>. <br><br> Drop us a line: <i>geral@sinfo.org</i>
+	      </div>
+	    </div>
+	  </div>
 
     <div class="ink-grid text-section team">
       <div class="column-group gutters">
@@ -645,51 +665,6 @@
           <a href="mailto:ines.urbano@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
       </div>
-    </div>
-
-    <div class="orador" id="orador">
-      <div class="opacidade">
-        <h1><a href="#orador" title="orador">Who's that speaker?</a></h1>
-        <div class="description">
-          Find now who is coming to SINFO 22.
-        </br>
-        </div>
-      </div>
-    </div>
-
-    <div class="ink-grid text-section whois">
-    	<div class="column-group gutters">
-    		<div class="all-100" id="whoIsTitle">
-    			<h3>¡ Click in the photo to reveal !</h3>
-    		</div>
-    	</div>
-    	<div class="column-group gutters">
-    		<div class="all-100" id="whoIsPhoto">
-    			<img src="img/who.jpg" onclick="
-    			$(this).after('<p>Yes! Helder Pinto will be at SINFO 22, know more below</p>');
-    			$(this).replaceWith('<img src=&quot;img/orador1.jpg&quot;>');    			
-    			$('#whoIsPhoto').attr('id', 'whoIsNewPhoto');
-    			$('#whoIsTitle h3').replaceWith('<h2>Helder Pinto</h2>');
-    			$('#videoReveal').show();
-    			$('#OradorInfo').show();">
-    		</div>
-    	</div>
-    	<div class="column-group gutters">
-    		<div class="all-60 medium-100 small-100">
-    			<div id="videoReveal" style="display:none;">
-    				<iframe width="560" height="315" src="http://www.youtube.com/embed/WKScK5O6rTw" frameborder="0" allowfullscreen></iframe>
-    			</div>
-    		</div>
-    		<div class="all-35 medium-100 small-100">
-    			<div id="OradorInfo" style="display:none;">
-    				Worked at Crytek as Level Artist during Crysis 2 and midway through Crysis 3.
-           			<br>He was responsible for performance, aesthetics, dressing the scene, modeling assets, creating textures and tweaking materials / shaders to bring the scene to life. While always respecting the Level Designers vision (block-mesh).
-            		<br>
-            		<br>Since 2012 he has been working as 3D Environment Artist at Blizzard Entertainment, bringing to life Diablo 3.
-            		<br><a href="http://www.helderpinto.com" target="_blank">Click here to discover more</a>
-    			</div>
-    		</div>
-    	</div>
     </div>
 
     <footer>
