Added Scott Chacon news

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
           <span class="note">December 2nd, 2014</span>
-          <h3>SINFO wants to help you get a job</h3>
+          <h3>New speaker announced!</h3>
           <p>
-            Do you want to work for one of the companies at XXI SINFO?<br>
-            Use the form located at the right to send us your CV until the end of July and we'll do the rest.<br>
-            We'll get you an awesome job in no time!
+            Scott Chacon, CIO and VP of R&D of Github, Git evangelist and software developer<br>
+            Also known as the autor of the book Pro Git, considered by many the holy bible of git, <br>
+            will be at SINFO on 25th of February. 
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
