--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="ink-grid text-section previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-          <h2>Announced Speakers</h2>
+          <h2>Sinfo 22 Speakers</h2>
         </div>
       </div>
       <div class="column-group gutters">
