Fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="ink-grid text-section previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-          <h2>Sinfo 22 Speakers</h2>
+          <h2>Confirmed Speakers for SINFO 22</h2>
         </div>
       </div>
       <div class="column-group gutters">
@@ -221,17 +221,13 @@
           <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
           <p class="note">CIO and R&D VP of Github</p>
         </div>
-	    </div>
-  	</div>
+      </div>
+    </div>
 
     <div class="ink-grid previous-speakers">
-		<div class="column-group gutters">
-	        <div class="all-100">
-	     	   <h2>Previous Speakers</h2>
-	   		</div>
-	  	</div>
       <div class="column-group gutters">
         <div class="all-100">
+	  <h2>Previous Speakers</h2>
           <span class="note">Click on the pictures to watch the talk on YouTube</span>
         </div>
       </div>
