Fixed stuff on speakers :shipit:

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="code.html">Code of Conduct</a></li>          
+          <li><a href="code.html">Code of Conduct</a></li>
         </ul>
       </nav>
 
@@ -156,7 +156,7 @@
           <p>
             Scott Chacon, CIO and VP of R&D of Github, Git evangelist and software developer<br>
             Also known as the autor of the book Pro Git, considered by many the holy bible of git, <br>
-            will be at SINFO on 25th of February. 
+            will be at SINFO on 25th of February.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -187,7 +187,7 @@
 	      <input type="hidden" name="MAX_FILE_SIZE" value="1000000" />
    	      <input name="uploaded_file" type="file" />
     	      <input type="submit" value="Upload" />
-  	    </form> 
+  	    </form>
           </div>-->
         </div>
       </div>
@@ -211,12 +211,12 @@
         </div>
       </div>
       <div class="column-group gutters">
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Helder Pinto</h6>
           <img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt="">
           <p class="note">3D game environment artist at Blizzard</p>
         </div>
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Scott Chacon</h6>
           <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
           <p class="note">CIO and R&D VP of Github</p>
@@ -227,64 +227,62 @@
     <div class="ink-grid previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-	  <h2>Previous Speakers</h2>
+      	  <h2>Speakers from previous editions</h2>
           <span class="note">Click on the pictures to watch the talk on YouTube</span>
         </div>
       </div>
       <div class="column-group gutters">
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-20 medium-33 small-50 tiny-100">
           <h6>Richard Stallman</h6>
           <img src="img/speakers/stallman.jpg" onmouseover="this.src='img/speakers/back/stallman.png'" onmouseout="this.src='img/speakers/stallman.jpg'" alt="">
           <p class="note">Founder of GNU and the Free Software Foundation</p>
         </div>
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-20 medium-33 small-50 tiny-100">
           <h6>Joel Spolsky</h6>
           <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/spolsky.jpg" onmouseover="this.src='img/speakers/back/spolsky.png'" onmouseout="this.src='img/speakers/spolsky.jpg'" alt=""></a>
           <p class="note">Founder of Fog Creek Software and creator of Stack Overflow</p>
         </div>
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-20 medium-33 small-50 tiny-100">
           <h6>Ray Muzyka</h6>
           <a href="https://www.youtube.com/watch?v=igjfrbmCDlk" target="_blank"><img src="img/speakers/muzyka.jpg" onmouseover="this.src='img/speakers/back/muzyka.png'" onmouseout="this.src='img/speakers/muzyka.jpg'" alt=""></a>
           <p class="note">Founder of BioWare and its former CEO</p>
         </div>
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-20 medium-33 small-50 tiny-100">
           <h6>Trina Gregory</h6>
           <a href="https://www.youtube.com/watch?v=tTFivPrCXQs" target="_blank"><img src="img/speakers/tgregory.png" onmouseover="this.src='img/speakers/back/trina.png'" onmouseout="this.src='img/speakers/tgregory.png'" alt=""></a>
           <p class="note">Senior Lecturer at University of Southern California</p>
         </div>
-        <div class="all-20 medium-20 small-100 tiny-100">
+        <div class="all-20 medium-33 small-50 tiny-100">
           <h6>Rick Falkvinge</h6>
           <a href="https://www.youtube.com/watch?v=5dTREZNbljY" target="_blank"><img src="img/speakers/falkvinge.jpg" onmouseover="this.src='img/speakers/back/falkvinge.png'" onmouseout="this.src='img/speakers/falkvinge.jpg'" alt=""></a>
           <p class="note">Founder and first party leader of the Swedish Pirate Party.</p>
         </div>
-      </div>
-        <div class="column-group gutters">
-          <div class="all-20 medium-20 small-100 tiny-100">
-            <h6>Jason Gregory</h6>
-            <a href="https://www.youtube.com/watch?v=f8XdvIO8JxE" target="_blank"><img src="img/speakers/gregory.jpg" onmouseover="this.src='img/speakers/back/jason.png'" onmouseout="this.src='img/speakers/gregory.jpg'" alt=""></a>
-            <p class="note">Lead programmer at Naugthy Dog</p>
-          </div>
-          <div class="all-20 medium-20 small-100 tiny-100">
-            <h6>Rasmus Lerdorf</h6>
-            <a href="https://www.youtube.com/watch?v=mMo00KHm8BA" target="_blank"><img src="img/speakers/lerdorf.jpg" onmouseover="this.src='img/speakers/back/lerdorf.png'" onmouseout="this.src='img/speakers/lerdorf.jpg'" alt=""></a>
-            <p class="note">Creator of PHP scripting language</p>
-          </div>
-          <div class="all-20 medium-20 small-100 tiny-100">
-            <h6>Alan Shaw</h6>
-            <a href="https://www.youtube.com/watch?v=HxMOyFLamCs" target="_blank"><img src="img/speakers/shaw.jpg" onmouseover="this.src='img/speakers/back/alanshaw.png'" onmouseout="this.src='img/speakers/shaw.jpg'" alt=""></a>
-            <p class="note">Co-Founder of the Meteor London meetup group</p>
-          </div>
-          <div class="all-20 medium-20 small-100 tiny-100">
-            <h6>Adam DuVander</h6>
-            <a href="https://www.youtube.com/watch?v=u6Bp2aO5xb4" target="_blank"><img src="img/speakers/duvander.jpg" onmouseover="this.src='img/speakers/back/duvander.png'" onmouseout="this.src='img/speakers/duvander.jpg'" alt=""></a>
-            <p class="note">Developer Communications Director at SendGrid</p>
-          </div>
-          <div class="all-20 medium-20 small-100 tiny-100">
-            <h6>Afonso Salcedo</h6>
-            <a href="https://www.youtube.com/watch?v=QBiR0itBXpk" target="_blank"><img src="img/speakers/salcedo.jpg" onmouseover="this.src='img/speakers/back/salcedo.png'" onmouseout="this.src='img/speakers/salcedo.jpg'" alt=""></a>
-            <p class="note">Founder of Sutro Studios. Former Pixar and Dreamworks</p>
-          </div>
+        <div class="all-20 medium-33 small-50 tiny-100">
+          <h6>Jason Gregory</h6>
+          <a href="https://www.youtube.com/watch?v=f8XdvIO8JxE" target="_blank"><img src="img/speakers/gregory.jpg" onmouseover="this.src='img/speakers/back/jason.png'" onmouseout="this.src='img/speakers/gregory.jpg'" alt=""></a>
+          <p class="note">Lead programmer at Naugthy Dog</p>
         </div>
+        <div class="all-20 medium-33 small-50 tiny-100">
+          <h6>Rasmus Lerdorf</h6>
+          <a href="https://www.youtube.com/watch?v=mMo00KHm8BA" target="_blank"><img src="img/speakers/lerdorf.jpg" onmouseover="this.src='img/speakers/back/lerdorf.png'" onmouseout="this.src='img/speakers/lerdorf.jpg'" alt=""></a>
+          <p class="note">Creator of PHP scripting language</p>
+        </div>
+        <div class="all-20 medium-33 small-50 tiny-100">
+          <h6>Alan Shaw</h6>
+          <a href="https://www.youtube.com/watch?v=HxMOyFLamCs" target="_blank"><img src="img/speakers/shaw.jpg" onmouseover="this.src='img/speakers/back/alanshaw.png'" onmouseout="this.src='img/speakers/shaw.jpg'" alt=""></a>
+          <p class="note">Co-Founder of the Meteor London meetup group</p>
+        </div>
+        <div class="all-20 medium-33 small-50 tiny-100">
+          <h6>Adam DuVander</h6>
+          <a href="https://www.youtube.com/watch?v=u6Bp2aO5xb4" target="_blank"><img src="img/speakers/duvander.jpg" onmouseover="this.src='img/speakers/back/duvander.png'" onmouseout="this.src='img/speakers/duvander.jpg'" alt=""></a>
+          <p class="note">Developer Communications Director at SendGrid</p>
+        </div>
+        <div class="all-20 medium-33 small-50 tiny-100">
+          <h6>Afonso Salcedo</h6>
+          <a href="https://www.youtube.com/watch?v=QBiR0itBXpk" target="_blank"><img src="img/speakers/salcedo.jpg" onmouseover="this.src='img/speakers/back/salcedo.png'" onmouseout="this.src='img/speakers/salcedo.jpg'" alt=""></a>
+          <p class="note">Founder of Sutro Studios. Former Pixar and Dreamworks</p>
+        </div>
+      </div>
     </div>
 
     <div class="workshops" id="workshops">
