Added twitter links to confirmed speakers :shipit:

--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
       <div class="column-group gutters">
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Helder Pinto</h6>
-          <img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt="">
+          <a href="https://twitter.com/HelderHP" target="_blank"><img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt=""></a>
           <p class="note">3D game environment artist at Blizzard</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Scott Chacon</h6>
-          <a href="https://www.youtube.com/watch?v=tamF4p04bfk" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
+          <a href="https://twitter.com/chacon" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
           <p class="note">CIO and R&D VP of Github</p>
         </div>
       </div>
