--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="all-50 small-100 tiny-100 justify-text">
           <h3>Why?</h3>
-          <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or enterprises in the fields of Information Technology and Computer Science.</p>
+          <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or companies in the fields of Information Technology and Computer Science.</p>
         </div>
       </div>
       <div class="column-group gutters">
