--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
           <a href="https://twitter.com/chacon" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
           <p class="note">CIO and R&D VP of Github</p>
         </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Minh Le</h6>
+          <a href="https://twitter.com/chacon" target="_blank"><img src="img/speakers/gooseman.png" onmouseover="this.src='img/speakers/back/gooseman.png'" onmouseout="this.src='img/speakers/gooseman.png'" alt=""></a>
+          <p class="note">Computer game developer and creator of Counter-Strike</p>
+        </div>
       </div>
     </div>
 
