Sponsor page text changes

--- a/sponsor.html
+++ b/sponsor.html
@@ -65,9 +65,9 @@
 						<a class="logoPlaceholder" href="#" title="SINFO">  <img src="img/logo.png"></a>
 					</li>
 					<li><a href="#description">Description</a></li>
-					<li><a href="#reasons">Reasons to sponsor</a></li>
+					<li><a href="#reasons">Partnership Reasons</a></li>
           <li><a href="#curricula">Curricula</a></li>
-					<li><a href="#conditions">Sponsorship conditions</a></li>
+					<li><a href="#conditions">Partnership Details</a></li>
 					<li><a href="#startups">Startups</a></li>
 					<li><a href="#deadlines">Deadlines</a></li>
 					<li><a href="#more-information">More information</a></li>		
@@ -84,9 +84,9 @@
 
 				<ul class="menu vertical flat black hide-all" id="topbar_menu">
 					<li><a href="#description">Description</a></li>
-					<li><a href="#reasons">Reasons to sponsor</a></li>
+					<li><a href="#reasons">Partnership Reasons</a></li>
           <li><a href="#curricula">Curricula</a></li>
-					<li><a href="#conditions">Sponsorship conditions</a></li>
+					<li><a href="#conditions">Partnership Details</a></li>
 					<li><a href="#startups">Startups</a></li>
 					<li><a href="#deadlines">Deadlines</a></li>
 					<li><a href="#more-information">More information</a></li>
@@ -97,10 +97,10 @@
 		<div class="sponsor-header" id="sponsor-header">
 		  <div class="opacidade">
 			<h1>
-				<a href="#" title="">Sponsor us!</a>
+				<a href="#" title="">Become a Partner!</a>
 			</h1>
 			<div class="description2">
-				See how you can help us creating the biggest SINFO ever!
+				See how you can help us create the biggest SINFO ever!
 			</div>
 		  </div>
 		</div>
@@ -116,7 +116,7 @@
 			</div>
 			<div id="reasons" class="column-group gutters">
 				<div class="all-100">
-					<h2>Reasons to sponsor</h2>
+					<h2>Reasons to become a Partner</h2>
             <ul>
               <li>Do you want to recruit the best of the best from Portuguese universities? Are the more than 4000 participants, interested in Full Time, Part-time and internships jobs, music to your ears?</li>
               <li>Do you want to promote, advertise and make your company known to future potential employees?</li>
@@ -137,13 +137,13 @@
 
 			<div id="conditions" class="column-group gutters">
 				<div class="all-100">
-					<h2>Sponsorship conditions</h2>
-					<h3>Sponsorship Levels</h3>
+					<h2>Partnership Details</h2>
+					<h3>Partnership Genres</h3>
 
 					<div class="container">
 						<div class="heading"><div class="toggleHead">+</div>Annual</div>
 						<div class="content">
-							<div class="PackageContent">Package Content</div>
+							<div class="PackageContent">Partnership Levels</div>
 							<table class="all-100 medium-100 small-100 tiny-100">
 								<thead>
 									<tr>
@@ -264,13 +264,13 @@
                         </td></tr>
                 </tr>
 								<tr class="price">
-									<td class="firstTd">Price</td><td>3.500€</td><td>2.500€</td><td>1.500€</td><td>1.000€</td>
+									<td class="firstTd">Level's Price</td><td>3.500€</td><td>2.500€</td><td>1.500€</td><td>1.000€</td>
 								</tr>
 								<tr class="alterprice">
-									<td class="firstTd">Individual Price</td><td>6.750€</td><td>3.975€</td><td>2.250€</td><td>1.200€</td>
+									<td class="firstTd">Price sum of all individual items</td><td>6.750€</td><td>3.975€</td><td>2.250€</td><td>1.200€</td>
 								</tr>
                 <tr class="discount">
-                    <td class="firstTd">Difference</td><td>- 3.250€</td><td>- 1.475€</td><td>- 750€</td><td>- 200€</td>
+                    <td class="firstTd">Saving</td><td>- 3.250€</td><td>- 1.475€</td><td>- 750€</td><td>- 200€</td>
                   </tr>
                   <tr class="choose">
                      <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
@@ -281,7 +281,7 @@
 						</div>
 						<div class="heading"><div class="toggleHead">+</div>Main Event</div>
 						<div class="content">
-							<div class="PackageContent">Package Content</div>
+							<div class="PackageContent">Partnership Levels</div>
 								<table class="all-100">
 									<thead>
 										<tr>
@@ -412,13 +412,13 @@
                    </td></tr>
                   </tr>
 									<tr class="price">
-										<td class="firstTd">Price</td><td>3.750€</td><td>2.500€</td><td>1.750€</td><td>1.250€</td>
+										<td class="firstTd">Level's Price</td><td>3.750€</td><td>2.500€</td><td>1.750€</td><td>1.250€</td>
 									</tr>
 									<tr class="alterprice">
-										<td class="firstTd">Individual Price</td><td>7.655€</td><td>4.595€</td><td>2.660€</td><td>1.360€</td>
+										<td class="firstTd">Price sum of all individual items</td><td>7.655€</td><td>4.595€</td><td>2.660€</td><td>1.360€</td>
 									</tr>
                   <tr class="discount">
-                    <td class="firstTd">Difference</td><td>- 3.905€</td><td>- 2.095€</td><td>- 910€</td><td>- 110€</td>
+                    <td class="firstTd">Saving</td><td>- 3.905€</td><td>- 2.095€</td><td>- 910€</td><td>- 110€</td>
                   </tr>
                   <tr class="choose">
                      <td class="firstTd" colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
@@ -447,7 +447,7 @@
 							</div>
 							<div class="heading" id="Publicity"><div class="toggleHead">+</div>Advertising</div>
 							<div class="content">
-								<div class="PackageContent">Package Content</div>
+								<div class="PackageContent">Partnership Levels</div>
 								<table class="all-100">
 									<thead>
 										<tr>
@@ -687,13 +687,13 @@
                           </td></tr>
                   </tr>
 									<tr class="price">
-										<td class="firstTd">Price</td><td>2.500€</td><td>1.500€</td><td>600€</td><td>450€</td>
+										<td class="firstTd">Level's Price</td><td>2.500€</td><td>1.500€</td><td>600€</td><td>450€</td>
 									</tr>
 									<tr class="alterprice">
-										<td class="firstTd">Individual Price</td><td>3.505€</td><td>2.095€</td><td>910€</td><td>610€</td>
+										<td class="firstTd">Price sum of all individual items</td><td>3.505€</td><td>2.095€</td><td>910€</td><td>610€</td>
 									</tr>
                   <tr class="discount">
-                    <td class="firstTd">Difference</td><td>- 855€</td><td>- 595€</td><td>- 310€</td><td>- 160€</td>
+                    <td class="firstTd">Saving</td><td>- 855€</td><td>- 595€</td><td>- 310€</td><td>- 160€</td>
                   </tr>
                   <tr class="choose">
                      <td class="firstTd"><b>To the aforementioned values will be added the current VAT rates.</b></td>
@@ -1061,7 +1061,7 @@
 			<div id="deadlines" class="column-group gutters">
 				<div class="all-100">
 					<h2>Deadlines</h2>
-					<p>Confirmation of sponsorship: <b>until January 18</b>.</p>
+					<p>Partnership Confirmation: <b>until January 18</b>.</p>
 				</div>
 			</div>
 
